[package]
name = "clini"
version = "0.1.0"
authors = ["Dominic Green <mail@domgreen.com>"]
edition = "2018"
license = "MIT"
description = "clini is a simple tool to do basic modification of ini files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.0.0-beta.2"
exitcode = "1.1.2"
rust-ini = "0.16"
