[package]
name = "clini"
version = "0.1.0"
authors = ["Dominic Green <dominicgreen1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "clini is a simple tool to do basic modification of ini files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4", features = ["derive"] }
exitcode = "1.1.2"
rust-ini = "0.18"
